force-app/main/default/objects/Batch_Log__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <description>Holds the name of the batch called when the record was created</description>
    <inlineHelpText>Holds the name of the batch called when the record was created</inlineHelpText>
    <label>Batch</label>
    <length>100</length>
    <type>Text</type>
</CustomField>