force-app/main/default/objects/Batch_Log__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Holds the description of the batch launched</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>