force-app/main/default/objects/Batch_Log__c/fields/Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Entry_Date__c</fullName>
    <description>Holds the date and time when the batch started</description>
    <label>Entry Date</label>
    <type>DateTime</type>
</CustomField>