force-app/main/default/objects/Batch_Log__c/fields/Exception_Message__c.field-meta.xml
<CustomField>
    <fullName>Exception_Message__c</fullName>
    <description>Holds the error causing the batch to fail</description>
    <label>Exception Message</label>
    <type>TextArea</type>
</CustomField>