force-app/main/default/objects/Batch_Log__c/fields/Job_Scope__c.field-meta.xml
<CustomField>
    <fullName>Job_Scope__c</fullName>
    <label>Job Scope</label>
    <length>100</length>
    <type>Text</type>
</CustomField>