force-app/main/default/objects/Batch_Log__c/fields/Log_Type__c.field-meta.xml
<CustomField>
    <fullName>Log_Type__c</fullName>
    <label>Log Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>